--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   http: ^1.1.0
   url_launcher: ^6.1.14
   shared_preferences: ^2.2.2
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
+  google_sign_in: 6.1.6
 
 dev_dependencies:
   flutter_test:
